UNRELEASED, S3QL tip

  * S3QL now longer crashes when the server sends a zero-length
    response that claims to be XML.

2015-01-31, S3QL 2.13

  * The internal file system revision has changed. File systems
    created with S3QL 2.13 or newer are not compatible with prior S3QL
    versions.

    To update an existing file system to the newest revision, use the
    's3qladm upgrade' command. During the upgrade, all storage objects
    that were created by S3QL 1.1 or earlier will be downloaded and
    re-uploaded. For objects created by S3QL 1.1.2 or later, the
    upgrade will only affect the storage object's metadata (so no
    contents need to be transferred).

  * SECURITY ADVISORY: Previous mkfs.s3ql versions used /dev/urandom
    to generate the master key when creating a new encrypted file
    system. However, /dev/urandom is not guaranteed to provide the
    256-bits of entropy requested by S3QL. This may have allowed an
    attacker to predict parts of the master key in situations where
    little entropy is available (e.g. right after system boot, or if a
    different program has previously drained the entropy pool).

    Note that the master key is not affected when the file system
    passphrase is changed. The only way to recover from a potentially
    compromised master key is to create a new file system and copy
    over all data.

  * When creating new file systems, the master key is now generated by
    reading /dev/random rather than /dev/urandom to ensure sufficient
    entropy.

  * The 'no-ssl' option for the swift backend is now used only when
    connecting to the authentication server. Whether SSL is used when
    connecting to the storage server is determined by the
    authentication server.

  * Fixed a crash when using the "disable-expect100" swift backend
    option.

  * Fixed a race condition that could lead to a "KeyError" crash
    when refreshing a Google Storage OAuth2 access token.
