@@ -3,6 +3,9 @@ UNRELEASED, S3QL tip
   * S3QL now longer crashes when the server sends a zero-length
     response that claims to be XML.
 
+  * The default tcp-timeout has been increased from 10 seconds to 20
+    seconds.
+
 2015-01-31, S3QL 2.13
 
   * The internal file system revision has changed. File systems
